--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <h1>New GPT Prompt Form</h1>
         <form name="frmContact" id="" action="" enctype="multipart/form-data">
             <div class="row">
-                <div class="inline-block right-margin">
-                    <div class="label">
-                        Select a Pre-Created Template:<span id="template-info" class="info"></span>
+                <div class="hidden">
+                    <div class="hidden">
+                        Select a Pre-Created Template:<span id="template-info" class="hidden"></span>
                     </div>
                     
                     <select name="contact-template" 
-                    class="input-field" id="select">
+                    class="hidden" id="select">
                         <option value = "Email NewsLetter" selected>Email NewsLetter</option>
                         <option value = "Google Text Ad">Google Text Ad</option>
                         <option value = "Facebook Post">Facebook Post</option>
@@ -27,7 +27,7 @@
                      </select>
                 </div>
             </div>
-            <!-- <div class="row">
+            <div class="row">
                 <div class="inline-block right-margin">
                     <div class="label">
                         Company Name <span id="companyName-info" class="info"></span>
@@ -41,7 +41,7 @@
                     <input type="text" class="input-field" name="contact-audience" id="contact-audience" />
                 </div>
                
-            </div> -->
+            </div>
             <div class="row">
                 <div class="inline-block right-margin">
                     <div class="label">
